--- a/css/stylz.css
+++ b/css/stylz.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #296699;
+    background-color: #ccffff;
     margin: 0 auto;
     font-family: 'Tinos', serif;
     width: 100%;
@@ -42,11 +42,11 @@ h1 {
     top: 150px;
 }
 p {
-    height: 800px;
-    width: 500px;
+    height: 500px;
+    width: 300px;
     margin-left: 50px;
     word-wrap: break-word;
-    text-align-last: justify;
+    /*text-align-last: justify;*/
     text-justify: inter-word;
 }
 
@@ -76,7 +76,7 @@ p {
     text-align: center;
     margin-left: 150px;
     font-size: 50px;
-    color: #dab3ff;
+    color: #3333ff;
     position: static;
 }
 
@@ -91,30 +91,41 @@ p {
 img {
     width: 100%;
     height: 400px;
+    border-color: #ff9999;
+    border-width: 2px;
+    border-bottom-color: #ff9999;
 }
 
 .column-one {
     width: 50%;
     display: inline-block;
-    height: 300px;
+    height: 400px;
     position: static;
-    background-image: url('../img/flower.jpg');
+    background-image: url('../img/Direction.jpg');
     float: left;
 }
 
-.flower {
-    width: 40%
-    height: 50%;
+/*.yantra {*/
+/*    width: 20%;*/
+/*    height: 250px;*/
+    /*border-color: #ff9999;*/
+    /*border-width: 2px;*/
+    /*border-bottom-color: #ff9999;*/
+/*}*/
+
+.image {
+    height: 200px;
+    width: 500px;
 }
 
 .column-two {
+    display: inline-block;
     float: left;
     text-align: center;
-    display: inline-block;
     width: 50%;
-    height: 300px;
+    height: 600px;
     /*position: absolute;*/
-    margin-top: 0px;
+    /*margin-top: 0px;*/
 }
 
 .row:after {
@@ -127,4 +138,47 @@ img {
     width: 100%;
 }
 
-
+.footer{
+    width: 100%;
+    height: 115px;
+    background-color: #0080ff;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+}
+.footer-col{
+    width: 33%;
+    display: inline-block;
+    vertical-align: top;
+}
+.footer-btn {
+    background-color: #fff;
+    color: #C92C21;
+    width: 100px;
+    height: 50px;
+    font-size: 15px;
+    border-radius: 15px;
+    margin-left: 25%;
+    margin-top: 40px;
+    border: double;
+    cursor: pointer;
+}
+.footer-btn:hover{
+    background-color: #ffff00;
+}
+.icons-wrap{
+    margin-top: 50px;
+    margin-left: 130px;
+}
+.icon{
+    color: a3a375;
+    margin-right: 15px;
+}
+.icon:hover{
+    color: #ffff00;
+}
+.copyright{
+    color: #fff;
+    margin-top: 50px;
+    margin-left: 130px;
+}
