--- a/css/stylztwo.css
+++ b/css/stylztwo.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #009999;
+    background-color: #ccffff;
     margin: 0 auto;
     font-family: 'Tinos', serif;
 }
@@ -57,4 +57,51 @@ img {
 .contact-col-one {
     display: inline-block;
     float: left;
+    width: 200px;
+    height: 200px;
+}
+
+.footer{
+    width: 100%;
+    height: 115px;
+    background-color: #0080ff;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+}
+.footer-col{
+    width: 33%;
+    display: inline-block;
+    vertical-align: top;
+}
+.footer-btn {
+    background-color: #fff;
+    color: #C92C21;
+    width: 100px;
+    height: 50px;
+    font-size: 15px;
+    border-radius: 15px;
+    margin-left: 25%;
+    margin-top: 40px;
+    border: double;
+    cursor: pointer;
+}
+.footer-btn:hover{
+    background-color: #ffff00;
+}
+.icons-wrap{
+    margin-top: 50px;
+    margin-left: 130px;
+}
+.icon{
+    color: a3a375;
+    margin-right: 15px;
+}
+.icon:hover{
+    color: #ffff00;
+}
+.copyright{
+    color: #fff;
+    margin-top: 50px;
+    margin-left: 130px;
 }
